fix artist alignment

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 #spotify > div {
-  position: relative;
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
   margin-left: 25px;
